v1.1.1 HotFix - Fixes Height with WebView cutting off bottom contents in discourse

--- a/app/components/Frame.scss
+++ b/app/components/Frame.scss
@@ -2,7 +2,7 @@
     WebView {
         position: absolute;
         width: calc(100% - 80px);
-        height: 100%;
+        height: 95vh;
         top: 39px;
     }
     .container h2 {
